Bug 1603153 throw an exception from nsThread::GetPRThread() when there is no PRThread r=froydnj

as is done in LazyIdleThread::GetPRThread().

Differential Revision: https://phabricator.services.mozilla.com/D56826